# planetsimulator

./: .gitignore  BUILD_SYSTEM.md  CLAUDE.md  CLAUDE_TOOLS_INTEGRATION.md  CLAUDE_TOOLS_PROPOSAL.md  CMakeLists.txt  CMakeLists_clean.txt  CMakeLists_octree.txt  CMakeLists_tests_section.txt  DEPRECATED_FILES.md  PATCH_CALCULATIONS.md  PERFORMANCE_ANALYSIS.md  PIPELINE_ANALYSIS.md  README.claude.md  README.md  ROADMAP.md  SPRING_CLEANING.md  TERRAIN_INVESTIGATION.md  VULKAN_OCTREE.md  all_tests.txt  analyze_octree  build.bat  build_output.txt  build_simple.bat  built_tests.txt  clean_cmake_complete.py  cleanup_code.py  cleanup_unused_shaders.bat  compile_shaders.bat  debug_output.txt  debug_terrain.py  dont_use_this.bat  fix_terrain.py  imgui.ini  main.cpp  mesh_debug_dump.txt  nul  output.txt  perf_test.txt  rebuild.bat  (+24 more)
.claude/: claude_tools.py  config.yml  settings.local.json
.claude/agents/: code-review-expert.md  game-engine-architect.md  graphics-debug-specialist.md  lean-code-implementer.md  lecoder.md
debug_data/: patch_data.txt  zoom_diagnostics.csv
diagnostic_results/: existing_tests_20250816_142642.txt  summary_20250816_141629.txt
docs/: ADAPTIVE_LOD_DESIGN.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONTINUOUS_ADAPTIVE_MESH.md  FACE_BOUNDARY_FIX.md  IMPLEMENTATION_PLAN.md  MATERIAL_MIXING_ANALYSIS.md  MATERIAL_MIXING_DESIGN.md  PATCH_DISCONTINUITY_FIX_SUMMARY.md  PATCH_FIX_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_ROADMAP.md  PHASE2_SUMMARY.md  PLANETARY_LOD_DESIGN.md  PLANET_EVOLUTION_ARCHITECTURE.md  RENDERER_ARCHITECTURE.md  ROADMAP.md  ROADMAP_EVOLUTION.md  TODO.md  TRANSVOXEL_PLAN.md  UNIFIED_PLANETARY_SYSTEM.md  VIEWER_CONTROLS.md  VULKAN_RENDERER_ROADMAP.md
docs/architecture/: RENDERING_PIPELINE.md  SYSTEM_INTERACTION_MAP.md
docs/debugging/: DIAGNOSTICS_CHECKLIST.md  DOTS_THEORY.md  FINAL_DIAGNOSIS.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING_LOG.md  debug_render_tracking.md  diagnose_rendering_issue.md
docs/fixes/: FIX_DEPTH_PRECISION.md  FIX_SUMMARY.md
include/algorithms/: marching_cubes_tables.hpp  mesh_generation.hpp
include/core/: camera.hpp  canonical_patch_system.hpp  density_field.hpp  edge_mapping.hpp  global_patch_generator.hpp  global_patch_system.hpp  global_patch_system_v2.hpp  material_table.hpp  mixed_voxel.hpp  octree.hpp  spherical_quadtree.hpp  unified_patch_system.hpp  vertex_generator.hpp  vertex_id_system.hpp  vertex_patch_system.hpp
include/math/: cube_sphere_mapping.hpp  patch_alignment.hpp  planet_math.hpp
include/rendering/: cpu_vertex_generator.hpp  gpu_octree.hpp  hierarchical_gpu_octree.hpp  imgui_manager.hpp  instance_buffer_manager.hpp  lod_manager.hpp  transvoxel_renderer.hpp  vertex_shared_transvoxel.hpp  vulkan_renderer.hpp
include/utils/: screenshot.hpp
logs/: debug_output.txt  debug_output2.txt
scripts/: README.md  analyze_tests.py  clean_cmake.py  compile_shaders.bat  compile_test.bat  run_tests.bat
scripts/analysis/: analyze_mesh.py  visualize_fix.py
scripts/testing/: run_diagnostic_tests.bat  run_diagnostic_tests.ps1  run_existing_tests.bat
shaders/: 2  build_release.bat  compile.bat  hierarchical.frag  hierarchical.frag.spv  hierarchical.vert  hierarchical.vert.spv  nul  octree_raymarch.frag  octree_raymarch.frag.spv.backup  octree_raymarch.vert  test_simple.vert
shaders/archive/: README.md
shaders/fragment/: hierarchical.frag
shaders/test/: analyze_octree_data.cpp  validate_mesh_shader.cpp
shaders/tools/: c2glsl.bat  c2glsl.py  compile.bat  extract_glsl.py  extract_simple_glsl.py
shaders/vertex/: hierarchical.vert
src/: debug_zoom_capture.cpp  main.cpp  sphere_patch_generator.cpp  test_sphere_mesh.cpp
src/algorithms/: mesh_generation.cpp
src/core/: camera.cpp  density_field.cpp  material_table.cpp  octree.cpp  (+4 more)
test/: CMakeLists.txt  material_passthrough_test  material_passthrough_test.cpp  octree_raymarch_spec.md  octree_raymarch_test  octree_raymarch_test.c  test_octree_stages  test_octree_stages.cpp  test_planet_issue  test_planet_issue.cpp
test_octree/: CMakeLists.txt  main.cpp  test_gpu.cpp
tests/: CMakeLists.txt  README.md  README_ORGANIZATION.md  test_actual_bounds.cpp  test_actual_edges.cpp  test_actual_gap.cpp  test_actual_lod_bugs.cpp  test_actual_patch.cpp  test_actual_rendering_path.cpp  test_ascii_planet.cpp  test_boundary_transform.cpp  test_boundary_verification.cpp  test_boundary_vertices.cpp  test_capture_real_data.cpp  test_check_coverage.cpp  test_chunk_boundaries.cpp  test_cleanup_list.txt  test_color_debug  test_color_debug.cpp  test_core_functionality.cpp  test_corner_transform.cpp  test_correct_vertex_matching.cpp  test_cross_face_fix.cpp  test_cube_sphere_mapping.cpp  test_cube_sphere_standalone.cpp  test_cube_to_sphere.cpp  test_cube_to_sphere_determinism.cpp  test_degenerate_triangles.cpp  test_dot_artifacts.cpp  test_dot_diagnosis.cpp  test_dot_investigation.cpp  test_dot_persistence.cpp  test_dots_fixed.cpp  test_double_planet_diagnosis.cpp  test_edge_mapping_fix.cpp  test_edge_ownership.cpp  test_edge_params.cpp  test_edge_patch_bug.cpp  test_edge_unification.cpp  test_edge_verification.cpp  (+113 more)
tests/fixes/: test_float_workaround.md
tests/investigation/: test_actual_boundary_fix.cpp  test_correct_boundaries.cpp  test_face_boundaries.cpp  test_face_boundary_issue.cpp  test_global_coords.cpp  test_patch_continuity.cpp  test_patch_coverage.cpp  test_patch_diagnostics.cpp  test_patch_positions.cpp  test_terrain_consistency.cpp  test_transform_debug.cpp  test_transform_diagnostics.cpp  test_visual_output.cpp
tests/phase1_vertex_id/: README.md  test_canonical_boundaries.cpp  test_vertex_id_integration.cpp
tests/pipeline/: test_execution_order.cpp  test_gpu_validation.cpp  test_material_pipeline.cpp  test_material_tracking.cpp  test_pipeline_state.cpp  test_shader_attributes.cpp  verify_shaders.bat
tests/proof_of_concept/: proof_of_concept  proof_of_concept.cpp
tests/rendering/: test_buffer_binding.cpp  test_draw_calls.cpp  test_gpu_attributes.cpp  test_vertex_attributes.cpp  test_water_rendering.cpp  test_water_rendering_simple.cpp
(+75 files in other folders)
